# ml_fastapi

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Makefile  app.Dockerfile  docker-compose.yml  entrypoint.sh  main.py  mid.py  pyproject.toml
adapters/api/: dataset.py  prediction.py
adapters/spi/: base_repo.py  dataset.py  postgres.py  prediction.py
app/: containers.py  settings.py
app/entity/: base.py  dataset.py  prediction.py
app/exceptions/: file_exceptions.py  http_exceptions.py
app/use_case/: base_dto.py  base_schema.py  base_use_case.py
app/use_case/dataset/: dataset.py  dataset_dto.py
app/use_case/prediction/: prediction.py  prediction_dto.py  prediction_schema.py
app/utils/: cbv.py  data_loader.py  data_preprocessing.py  file_operation.py  logger.py  ml_prediction.py  training_pipeline.py
ports/api/: dataset.py  prediction.py
ports/spi/: base_repo.py  dataset.py  postgres.py  prediction.py
