[tool.poetry]
name = "ml-fastapi"
version = "0.1.0"
description = ""
authors = ["harut <harut.avetisyan2002@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = "^0.29.0"
pydantic-settings = "^2.2.1"
sqlalchemy = "^2.0.30"
dependency-injector = "^4.41.0"
python-json-logger = "^2.0.7"
asyncpg = "^0.29.0"
greenlet = "^3.0.3"
uvloop = "^0.19.0"
scikit-learn = "^1.5.0"
pandas = "^2.2.2"
kneed = "^0.8.5"
xgboost = "^2.0.3"
imblearn = "^0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
